--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@
     <h1>{{ page.title }}</h1>
     {% if page.tagline %}<h2>{{ page.tagline }}</h2>{% endif %}
   </div><!--/ .headline-wrap -->
-  <img src="{{ site.url }}/images/{{ page.image.feature }}" alt="{{ page.title }} feature image">
+  <img src="{{ site.url }}{{ site.baseurl }}/images/{{ page.image.feature }}" alt="{{ page.title }} feature image">
 </div><!-- /.image-wrap -->
 
 <div class="article-author-top">
@@ -48,7 +48,7 @@
   <hr />
   {% for post in site.categories.articles limit:5 %}    
   <article itemscope itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
-    <h2 itemprop="headline"><a href="{{ site.url }}{{ post.url }}" rel="bookmark" title="{{ post.title }}">{{ post.title }}</a></h2>
+    <h2 itemprop="headline"><a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" rel="bookmark" title="{{ post.title }}">{{ post.title }}</a></h2>
     <p itemprop="text">{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 120 }}{% endif %}</p>
   </article>
   {% endfor %}
